{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 96,
  "lineage": "8f1ba27a-955e-27cf-d7ef-4625cd82d9ba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b3839778441eb953",
            "arn": "arn:aws:ec2:ap-southeast-1:442612105165:elastic-ip/eipalloc-0b3839778441eb953",
            "association_id": "eipassoc-073798d0de1eed1a1",
            "domain": "vpc",
            "id": "eipalloc-0b3839778441eb953",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0388a8279151ae061",
            "private_dns": "ip-10-0-0-234.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.234",
            "public_dns": "ec2-47-130-91-212.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.130.91.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "anigmaa-nat-eip-1"
            },
            "tags_all": {
              "Name": "anigmaa-nat-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb1531fabe6e9bbf",
            "arn": "arn:aws:ec2:ap-southeast-1:442612105165:elastic-ip/eipalloc-0bb1531fabe6e9bbf",
            "association_id": "eipassoc-090145c998024f3ab",
            "domain": "vpc",
            "id": "eipalloc-0bb1531fabe6e9bbf",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-04ff962cd97473b85",
            "private_dns": "ip-10-0-1-187.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.187",
            "public_dns": "ec2-13-215-255-132.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.255.132",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "anigmaa-nat-eip-2"
            },
            "tags_all": {
              "Name": "anigmaa-nat-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "anigmaa_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:442612105165:internet-gateway/igw-00c26be2fd71920f0",
            "id": "igw-00c26be2fd71920f0",
            "owner_id": "442612105165",
            "tags": {
              "Name": "anigmaa-igw"
            },
            "tags_all": {
              "Name": "anigmaa-igw"
            },
            "vpc_id": "vpc-0f3c6419d0e34448f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.anigmaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "anigmaa_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:442612105165:loadbalancer/app/anigmaa-alb/19728e580f226dd4",
            "arn_suffix": "app/anigmaa-alb/19728e580f226dd4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "anigmaa-alb-108202428.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:442612105165:loadbalancer/app/anigmaa-alb/19728e580f226dd4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "anigmaa-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0254818146f2adcb8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a647f3dd88d8db17"
              },
              {
                "subnet_id": "subnet-0e5c065f53dd10e88"
              }
            ],
            "subnets": [
              "subnet-0a647f3dd88d8db17",
              "subnet-0e5c065f53dd10e88"
            ],
            "tags": {
              "Name": "anigmaa-alb"
            },
            "tags_all": {
              "Name": "anigmaa-alb"
            },
            "vpc_id": "vpc-0f3c6419d0e34448f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.anigmaa_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "anigmaa_backend_http_only",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:442612105165:listener/app/anigmaa-alb/19728e580f226dd4/4977ea0f732f6c65",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:442612105165:targetgroup/anigmaa-backend-tg/342cd79a8918c547",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:442612105165:listener/app/anigmaa-alb/19728e580f226dd4/4977ea0f732f6c65",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:442612105165:loadbalancer/app/anigmaa-alb/19728e580f226dd4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.anigmaa_alb",
            "aws_lb_target_group.anigmaa_backend",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.anigmaa_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "anigmaa_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:442612105165:targetgroup/anigmaa-backend-tg/342cd79a8918c547",
            "arn_suffix": "targetgroup/anigmaa-backend-tg/342cd79a8918c547",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:442612105165:targetgroup/anigmaa-backend-tg/342cd79a8918c547",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:442612105165:loadbalancer/app/anigmaa-alb/19728e580f226dd4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "anigmaa-backend-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "anigmaa-backend-tg"
            },
            "tags_all": {
              "Name": "anigmaa-backend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f3c6419d0e34448f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.anigmaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b3839778441eb953",
            "association_id": "eipassoc-073798d0de1eed1a1",
            "connectivity_type": "public",
            "id": "nat-04c15054ea3c5183c",
            "network_interface_id": "eni-0388a8279151ae061",
            "private_ip": "10.0.0.234",
            "public_ip": "47.130.91.212",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a647f3dd88d8db17",
            "tags": {
              "Name": "anigmaa-nat-gateway-1"
            },
            "tags_all": {
              "Name": "anigmaa-nat-gateway-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.anigmaa_igw",
            "aws_subnet.public_subnets",
            "aws_vpc.anigmaa_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb1531fabe6e9bbf",
            "association_id": "eipassoc-090145c998024f3ab",
            "connectivity_type": "public",
            "id": "nat-0542b584649cf0d6b",
            "network_interface_id": "eni-04ff962cd97473b85",
            "private_ip": "10.0.1.187",
            "public_ip": "13.215.255.132",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e5c065f53dd10e88",
            "tags": {
              "Name": "anigmaa-nat-gateway-2"
            },
            "tags_all": {
              "Name": "anigmaa-nat-gateway-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.anigmaa_igw",
            "aws_subnet.public_subnets",
            "aws_vpc.anigmaa_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:442612105165:route-table/rtb-09f8af4b53496a5ee",
            "id": "rtb-09f8af4b53496a5ee",
            "owner_id": "442612105165",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04c15054ea3c5183c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "anigmaa-private-rt-1"
            },
            "tags_all": {
              "Name": "anigmaa-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3c6419d0e34448f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.anigmaa_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.anigmaa_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:442612105165:route-table/rtb-01cad29de525e6aac",
            "id": "rtb-01cad29de525e6aac",
            "owner_id": "442612105165",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0542b584649cf0d6b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "anigmaa-private-rt-2"
            },
            "tags_all": {
              "Name": "anigmaa-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3c6419d0e34448f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.anigmaa_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.anigmaa_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:442612105165:route-table/rtb-04e6f8c793d2ba3d2",
            "id": "rtb-04e6f8c793d2ba3d2",
            "owner_id": "442612105165",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00c26be2fd71920f0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "anigmaa-public-rt"
            },
            "tags_all": {
              "Name": "anigmaa-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3c6419d0e34448f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.anigmaa_igw",
            "aws_vpc.anigmaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061c08e987804e114",
            "route_table_id": "rtb-09f8af4b53496a5ee",
            "subnet_id": "subnet-0a069c3d3e48a0008"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.anigmaa_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.anigmaa_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef3fdfbb5923ad33",
            "route_table_id": "rtb-01cad29de525e6aac",
            "subnet_id": "subnet-0f9c3648b8d655681"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.anigmaa_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.anigmaa_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf763e268f846f33",
            "route_table_id": "rtb-04e6f8c793d2ba3d2",
            "subnet_id": "subnet-0a647f3dd88d8db17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.anigmaa_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.anigmaa_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a508b1b397139673",
            "route_table_id": "rtb-04e6f8c793d2ba3d2",
            "subnet_id": "subnet-0e5c065f53dd10e88"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.anigmaa_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.anigmaa_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:442612105165:security-group/sg-0254818146f2adcb8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0254818146f2adcb8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "anigmaa-alb-sg20251027100746404500000002",
            "name_prefix": "anigmaa-alb-sg",
            "owner_id": "442612105165",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "anigmaa-alb-sg"
            },
            "tags_all": {
              "Name": "anigmaa-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3c6419d0e34448f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.anigmaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:442612105165:security-group/sg-038b93a5d87ac986c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038b93a5d87ac986c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0254818146f2adcb8"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "anigmaa-ecs-sg20251027100748898100000004",
            "name_prefix": "anigmaa-ecs-sg",
            "owner_id": "442612105165",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "anigmaa-ecs-sg"
            },
            "tags_all": {
              "Name": "anigmaa-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3c6419d0e34448f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.anigmaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:442612105165:security-group/sg-02a0caa209412f340",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a0caa209412f340",
            "ingress": [],
            "name": "anigmaa-lambda-sg20251027100746399100000001",
            "name_prefix": "anigmaa-lambda-sg",
            "owner_id": "442612105165",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "anigmaa-lambda-sg"
            },
            "tags_all": {
              "Name": "anigmaa-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3c6419d0e34448f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.anigmaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:442612105165:security-group/sg-0722cb946fe364774",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0722cb946fe364774",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-038b93a5d87ac986c"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "anigmaa-rds-sg20251027100751320200000006",
            "name_prefix": "anigmaa-rds-sg",
            "owner_id": "442612105165",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "anigmaa-rds-sg"
            },
            "tags_all": {
              "Name": "anigmaa-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3c6419d0e34448f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_vpc.anigmaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:442612105165:security-group/sg-06c63b8e37b9cb213",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06c63b8e37b9cb213",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-038b93a5d87ac986c"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "anigmaa-redis-sg20251027100751318000000005",
            "name_prefix": "anigmaa-redis-sg",
            "owner_id": "442612105165",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "anigmaa-redis-sg"
            },
            "tags_all": {
              "Name": "anigmaa-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3c6419d0e34448f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_vpc.anigmaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_lambda_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-2639613894",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0722cb946fe364774",
            "security_group_rule_id": "sgr-07effb92a15558c75",
            "self": false,
            "source_security_group_id": "sg-02a0caa209412f340",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_security_group.lambda_sg",
            "aws_security_group.rds_sg",
            "aws_vpc.anigmaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "redis_lambda_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6379,
            "id": "sgrule-1887717935",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06c63b8e37b9cb213",
            "security_group_rule_id": "sgr-0b28efce56c10799a",
            "self": false,
            "source_security_group_id": "sg-02a0caa209412f340",
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_security_group.lambda_sg",
            "aws_security_group.redis_sg",
            "aws_vpc.anigmaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:442612105165:subnet/subnet-0a069c3d3e48a0008",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a069c3d3e48a0008",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442612105165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "anigmaa-private-subnet-1"
            },
            "tags_all": {
              "Name": "anigmaa-private-subnet-1"
            },
            "vpc_id": "vpc-0f3c6419d0e34448f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.anigmaa_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:442612105165:subnet/subnet-0f9c3648b8d655681",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9c3648b8d655681",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442612105165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "anigmaa-private-subnet-2"
            },
            "tags_all": {
              "Name": "anigmaa-private-subnet-2"
            },
            "vpc_id": "vpc-0f3c6419d0e34448f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.anigmaa_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:442612105165:subnet/subnet-0a647f3dd88d8db17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a647f3dd88d8db17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "442612105165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "anigmaa-public-subnet-1"
            },
            "tags_all": {
              "Name": "anigmaa-public-subnet-1"
            },
            "vpc_id": "vpc-0f3c6419d0e34448f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.anigmaa_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:442612105165:subnet/subnet-0e5c065f53dd10e88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5c065f53dd10e88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "442612105165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "anigmaa-public-subnet-2"
            },
            "tags_all": {
              "Name": "anigmaa-public-subnet-2"
            },
            "vpc_id": "vpc-0f3c6419d0e34448f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.anigmaa_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "anigmaa_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:442612105165:vpc/vpc-0f3c6419d0e34448f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d29f77c5737d306a",
            "default_route_table_id": "rtb-0842f3291306be465",
            "default_security_group_id": "sg-0a21a6b154f651371",
            "dhcp_options_id": "dopt-0bc14a4930c6713f1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f3c6419d0e34448f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0842f3291306be465",
            "owner_id": "442612105165",
            "tags": {
              "Name": "anigmaa-vpc"
            },
            "tags_all": {
              "Name": "anigmaa-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}